Changes with media queries

--- a/app/pages/includes/first-slide.html
+++ b/app/pages/includes/first-slide.html
@@ -6,7 +6,8 @@
                 <div class="first-slide__losung main-losung-96-white">Mavic 2 Pro</div>
 
                 <picture>
-                    <source srcset='../../img/mavic-dron-mobile.png' media="(max-width: 540px)">
+                    <source srcset='../../img/mavic-dron-mobile.png'
+                        media="screen and (max-width: 540px), screen and (max-height: 640px)">
                     <img class="first-slide__mavic-image layer" src="../../img/mavic-dron-desktop.png" alt="drone">
                 </picture>
                 <div class="first-slide__mavic-description text-17-white">Квадрокоптер Dji Mavic 2 Pro<br>
