--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -2,7 +2,7 @@
 
 /*==========  Desktop First  ==========*/
 
-@media only screen and (max-width : 768px)
+@media only screen and (max-width : 768px), screen and (max-height : 640px)
 	.header
 		top: 0px
 		height: 60px
@@ -47,11 +47,16 @@
 		left: -100%
 		transform: translate(-50%)
 	
-@media only screen and (max-width : 540px)
+@media only screen and (max-width : 540px), screen and (max-height : 640px)
 	.first-slide__losung
 		display: none
+	.first-slide__container
+		max-width: inherit
+	.first-slide__content
+		padding-bottom: 40px
 	.first-slide__mavic-image
 		width: auto
+		margin-bottom: 0
 	.first-slide__mavic-info
 		position: absolute
 		top: 50%
@@ -60,11 +65,11 @@
 	.first-slide__mavic-description
 		margin-bottom: 0
 
-@media only screen and (max-width : 1250px)
+@media only screen and (max-width : 1250px), screen and (max-height : 768px)
 	.advantage__title
 		font-size: 34px
 	.advantage__image-block
-		align-self: center
+		margin: 0 auto
 	.advantage__text
 		padding-left: 0
 	.advantage__image-description
@@ -79,7 +84,7 @@
 		img
 			width: 100%
 
-@media only screen and (max-width : 768px)
+@media only screen and (max-width : 768px), screen and (max-height : 600px)
 	.advantage__slider-item
 		flex-direction: column
 	.advantage__info-block
@@ -100,8 +105,8 @@
 	.advantage__image-description
 		display: none
 	.advantage__image
-		max-width: 350px
-		min-width: 200px
+		max-width: 320px
+		min-width: 150px
 		&::before
 			left: 0
 			bottom: 15px
@@ -109,6 +114,10 @@
 		right: auto
 		left: 50%
 		transform: translate(-50%, 0)
+
+@media only screen and (max-height : 460px)
+	.advantage__image
+		display: none
 
 @media only screen and (max-width : 1240px)
 	.third-slide__advantages-blocks
@@ -199,8 +208,7 @@
 		text-align: center
 	.fourth-slide	
 		img
-			transform: translate(-50%,-50%)
-			width: 100%
+			display: none
 
 @media only screen and (max-width : 768px)
 	.fifth-slide__dron-image
@@ -254,3 +262,6 @@
 			grid-template-columns: 1fr !important
 		&__description-area
 			grid-column: 1/1
+		&__button
+			width: 100%
+			// height: 
