Fixed bags with media queries/improved user form

--- a/app/pages/includes/six-slide.html
+++ b/app/pages/includes/six-slide.html
@@ -25,7 +25,7 @@
                     <div class="user-form__title subtitle-21-white">Остались вопросы?</div>
                     <div class="user-form__subtitle text-15-white">Мы обязательно свяжемся с вами в течение двух рабочих
                         дней</div>
-                    <form class="user-form__form" action="URL">
+                    <form class="user-form__form">
                         <input class="user-form__name-input default-form-style text-13-white" type="text"
                             placeholder="Ваше имя">
                         <input class="user-form__mail-input default-form-style text-13-white" type="text"
@@ -67,6 +67,12 @@
                 </div>
             </div>
 
+        </div>
+    </div>
+    <div class="error">
+        <div class="error__window">
+            <img class="error__logo" src="../../img/logo-mobile.svg" alt="logo">
+            <div class="error__title subtitle-21-white">Спасибо!</div>
         </div>
     </div>
 </div>
