--- a/app/sass/blocks/fourth-slide.sass
+++ b/app/sass/blocks/fourth-slide.sass
@@ -2,7 +2,9 @@
 .elip
     cursor: pointer    
 .fourth-slide    
-    position: relative
+    position: absolute
+    &__content
+        overflow: hidden !important
     &__title
         margin-bottom: 77px
     img
