--- a/app/sass/blocks/second-slide.sass
+++ b/app/sass/blocks/second-slide.sass
@@ -2,6 +2,7 @@
     &__slider
         display: flex
         align-items: center
+        overflow: hidden
     &__slider-item
         padding: 20px
         display: flex
@@ -12,7 +13,7 @@
             transition: 0.5s
             background-color: rgba(#fff, 0.1)
     &__info-block
-        overflow-y: scroll
+        overflow-y: auto
         height: 100%
         max-width: 470px
         min-width: 260px
