--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,8 +1,30 @@
 //for vars and mixin`s
 
-html, body 
-    scrollbar-color: #458245 #714826
-    scrollbar-width: thin
+.error
+    transition: 0.3s
+    position: fixed
+    top: 0
+    left: 0
+    z-index: 9999
+    display: none
+    width: 100%
+    height: 100%
+    text-align: center
+    background-color: rgba(black, 0.4)
+    &::before
+        content: ''
+        display: inline-block
+        height: 100%
+        vertical-align: middle
+    &__window
+        transition: 0.3s
+        background-color: #000
+        padding: 40px
+        border-radius: 5px
+        display: inline-flex
+        vertical-align: middle
+    &__logo
+        margin-right: 15px
 
 .bg 
     background-color: #000
@@ -72,7 +94,7 @@ html, body
     width: 100%
     max-width: 1280px
     margin: 0 auto
-    padding: 80px 40px 50px 40px
+    padding: 100px 40px 50px 40px
     height: 100vh
     display: flex
     align-items: center
