--- a/app/pages/includes/fourth-slide.html
+++ b/app/pages/includes/fourth-slide.html
@@ -100,9 +100,9 @@
             </div>
         </div>
     </div>
-    <div class="main__next-slide">
+    <!-- <div class="main__next-slide">
         <svg width="27" height="19" viewBox="0 0 17 9" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path opacity="0.5" d="M1 1L8.5 8L16 1" stroke="white" />
         </svg>
-    </div>
+    </div> -->
 </div>
