--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -2,7 +2,7 @@
 
 .error
     transition: 0.3s
-    position: fixed
+    position: absolute
     top: 0
     left: 0
     z-index: 9999
@@ -205,16 +205,6 @@
         transition: 0.3s
         background-color: #fff
         color: #000
-
-
-
-
-
-
-
-
-
-
 
 .menu-button
     cursor: pointer
