Change method of scrolling(by mouse wheel)

--- a/app/pages/includes/six-slide.html
+++ b/app/pages/includes/six-slide.html
@@ -75,4 +75,9 @@
             <div class="error__title subtitle-21-white">Спасибо!</div>
         </div>
     </div>
+    <div class="main__prev-slide">
+        <svg width="27" height="19" viewBox="0 0 17 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path opacity="0.5" d="M1 8L8.5 1L16 8" stroke="white" />
+        </svg>
+    </div>
 </div>
