--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -150,7 +150,17 @@
         &:hover
             transition: 0.3s
             opacity: 1
-
+    &__prev-slide
+        cursor: pointer
+        position: absolute
+        z-index: 30
+        bottom: 10px
+        left: 50%
+        opacity: 0.7
+        transform: translate(-50%)
+        &:hover
+            transition: 0.3s
+            opacity: 1
 .sqaure-btn
     cursor: pointer
     position: relative
