Change img path-es and method of connecting 'style' libs

--- a/app/pages/includes/fifth-slide.html
+++ b/app/pages/includes/fifth-slide.html
@@ -1,8 +1,8 @@
-<div class="main__slider-item fifth-slide swiper-slide" style='background-image: url(../../img/second-slide-bg.png);'
+<div class="main__slider-item fifth-slide swiper-slide" style='background-image: url(img/second-slide-bg.png);'
     data-slide-name='вопросы'>
     <div class="container">
         <div class="fifth-slide__content wrapper">
-            <!-- style='background-image: url(../../img/mavic-platinum-dron.png);' -->
+            <!-- style='background-image: url(img/mavic-platinum-dron.png);' -->
             <h2 class="fifth-slide__title title-44-white">Остались вопросы?</h2>
             <div class="fifth-slide__image-wrapper">
                 <div class="fifth-slide__accordion accordion">
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="../../img/mavic-platinum-dron.png" alt="" class='fifth-slide__dron-image'>
+                <img src="img/mavic-platinum-dron.png" alt="" class='fifth-slide__dron-image'>
             </div>
         </div>
     </div>
