--- a/app/pages/includes/fourth-slide.html
+++ b/app/pages/includes/fourth-slide.html
@@ -1,9 +1,9 @@
-<div class="main__slider-item fourth-slide swiper-slide" style='background-image: url(../../img/second-slide-bg.png);'
+<div class="main__slider-item fourth-slide swiper-slide" style='background-image: url(img/second-slide-bg.png);'
     data-slide-name='характеристики'>
     <div class="container">
         <div class="fourth-slide__content wrapper">
             <h2 class="fourth-slide__title title-44-white">Характеристики</h2>
-            <img src="../../img/mavic-dron-desktop.png" alt="">
+            <img src="img/mavic-dron-desktop.png" alt="">
             <div class="fourth-slide__characteristic-blocks">
                 <div class="fourth-slide__characteristic-block characteristic-block">
                     <div class="characteristic-block__description">
