--- a/app/pages/includes/second-slide.html
+++ b/app/pages/includes/second-slide.html
@@ -1,4 +1,4 @@
-<div class="main__slider-item second-slide swiper-slide" style='background-image: url(../../img/second-slide-bg.png);'
+<div class="main__slider-item second-slide swiper-slide" style='background-image: url(img/second-slide-bg.png);'
     data-slide-name='о дроне'>
     <div class="container">
 
@@ -27,7 +27,7 @@
                         <div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
                             технология аэросъемки</div>
                         <div class="advantage__image">
-                            <img src='../../img/characteristics-slider-image.png' alt=''>
+                            <img src='img/characteristics-slider-image.png' alt=''>
                         </div>
                     </div>
 
@@ -57,38 +57,7 @@
                         <div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
                             технология аэросъемки</div>
                         <div class="advantage__image">
-                            <img src='../../img/characteristics-slider-image2.jpg' alt=''>
-                        </div>
-                    </div>
-
-
-
-                </div>
-
-
-                <div class="advantage__slider-item swiper-slide">
-                    <div class="advantage__info-block">
-                        <div class="advantage__title title-44-white">Что такое Mavic 2 Pro?</div>
-                        <div class="advantage__text text-17-white">
-                            <p> Дрон Mavic 2 Pro - это инженерное чудо, идеальное для
-                                аэросъемки.
-                                Дрон обладает всеми лучшими технологиями DJI, он преобразит мир аэросъемки.</p>
-
-                            <p> Mavic 2 Pro оснащен совершенно новой камерой Hasselblad L1D-20c. Камера L1D-20c
-                                работает
-                                по
-                                уникальной технологии Hasselblad Natural Colour Solution (HNCS)5, позволяющей
-                                пользователям
-                                делать великолепные снимки с воздуха с разрешением в 20 мегапикселей и потрясающими
-                                цветами.</p>
-                        </div>
-                    </div>
-
-                    <div class="advantage__image-block">
-                        <div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
-                            технология аэросъемки</div>
-                        <div class="advantage__image">
-                            <img src='../../img/characteristics-slider-image3.jpg' alt=''>
+                            <img src='img/characteristics-slider-image2.jpg' alt=''>
                         </div>
                     </div>
 
@@ -119,7 +88,38 @@
                         <div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
                             технология аэросъемки</div>
                         <div class="advantage__image">
-                            <img src='../../img/characteristics-slider-image4.jpg' alt=''>
+                            <img src='img/characteristics-slider-image3.jpg' alt=''>
+                        </div>
+                    </div>
+
+
+
+                </div>
+
+
+                <div class="advantage__slider-item swiper-slide">
+                    <div class="advantage__info-block">
+                        <div class="advantage__title title-44-white">Что такое Mavic 2 Pro?</div>
+                        <div class="advantage__text text-17-white">
+                            <p> Дрон Mavic 2 Pro - это инженерное чудо, идеальное для
+                                аэросъемки.
+                                Дрон обладает всеми лучшими технологиями DJI, он преобразит мир аэросъемки.</p>
+
+                            <p> Mavic 2 Pro оснащен совершенно новой камерой Hasselblad L1D-20c. Камера L1D-20c
+                                работает
+                                по
+                                уникальной технологии Hasselblad Natural Colour Solution (HNCS)5, позволяющей
+                                пользователям
+                                делать великолепные снимки с воздуха с разрешением в 20 мегапикселей и потрясающими
+                                цветами.</p>
+                        </div>
+                    </div>
+
+                    <div class="advantage__image-block">
+                        <div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
+                            технология аэросъемки</div>
+                        <div class="advantage__image">
+                            <img src='img/characteristics-slider-image4.jpg' alt=''>
                         </div>
                     </div>
 
