--- a/app/pages/includes/six-slide.html
+++ b/app/pages/includes/six-slide.html
@@ -1,4 +1,4 @@
-<div class="main__slider-item six-slide swiper-slide" style='background-image: url(../../img/second-slide-bg.png);'
+<div class="main__slider-item six-slide swiper-slide" style='background-image: url(img/second-slide-bg.png);'
     data-slide-name='контакты'>
     <div class="container">
         <div class="six-slide__content wrapper">
@@ -71,7 +71,7 @@
     </div>
     <div class="error">
         <div class="error__window">
-            <img class="error__logo" src="../../img/logo-mobile.svg" alt="logo">
+            <img class="error__logo" src="img/logo-mobile.svg" alt="logo">
             <div class="error__title subtitle-21-white">Спасибо!</div>
         </div>
     </div>
