--- a/app/pages/includes/first-slide.html
+++ b/app/pages/includes/first-slide.html
@@ -1,4 +1,4 @@
-<div class="main__slider-item first-slide swiper-slide" style='background-image: url(../../img/first-slide-bg.png);'
+<div class="main__slider-item first-slide swiper-slide" style='background-image: url(img/first-slide-bg.png);'
     data-slide-name=''>
     <div class="first-slide__container">
         <div class="first-slide__content">
@@ -6,9 +6,9 @@
                 <div class="first-slide__losung main-losung-96-white">Mavic 2 Pro</div>
 
                 <picture>
-                    <source srcset='../../img/mavic-dron-mobile.png'
+                    <source srcset='img/mavic-dron-mobile.png'
                         media="screen and (max-width: 540px), screen and (max-height: 640px)">
-                    <img class="first-slide__mavic-image layer" src="../../img/mavic-dron-desktop.png" alt="drone">
+                    <img class="first-slide__mavic-image layer" src="img/mavic-dron-desktop.png" alt="drone">
                 </picture>
                 <div class="first-slide__mavic-description text-17-white">Квадрокоптер Dji Mavic 2 Pro<br>
                     с профессиональной камерой Hasselblad</div>
