--- a/app/pages/includes/third-slide.html
+++ b/app/pages/includes/third-slide.html
@@ -1,4 +1,4 @@
-<div class="main__slider-item third-slide swiper-slide" style='background-image: url(../../img/second-slide-bg.png);'
+<div class="main__slider-item third-slide swiper-slide" style='background-image: url(img/second-slide-bg.png);'
     data-slide-name='преимущества'>
     <div class="container">
         <div class="third-slide__content wrapper">
@@ -8,7 +8,7 @@
                 <div class="third-slide__advantage-block advantage-block">
                     <div class="advantage-block__number title-36-white">1</div>
                     <div class="advantage-block__image">
-                        <img src='../../img/advantages-first-image.png' alt=''>
+                        <img src='img/advantages-first-image.png' alt=''>
                     </div>
                     <div class="advantage-block__description">
                         <div class="advantage-block__title subtitle-21-white">Интеллектуальные
@@ -22,7 +22,7 @@
                 <div class="third-slide__advantage-block advantage-block">
                     <div class="advantage-block__number title-36-white">2</div>
                     <div class="advantage-block__image">
-                        <img src='../../img/advantages-second-image.png' alt=''>
+                        <img src='img/advantages-second-image.png' alt=''>
                     </div>
                     <div class="advantage-block__description">
                         <div class="advantage-block__title subtitle-21-white">Active Track 2.0</div>
@@ -34,7 +34,7 @@
                 <div class="third-slide__advantage-block advantage-block">
                     <div class="advantage-block__number title-36-white">3</div>
                     <div class="advantage-block__image">
-                        <img src='../../img/advantages-third-image.png' alt=''>
+                        <img src='img/advantages-third-image.png' alt=''>
                     </div>
                     <div class="advantage-block__description">
                         <div class="advantage-block__title subtitle-21-white">Панорамная
@@ -49,7 +49,7 @@
                 <div class="third-slide__advantage-block advantage-block">
                     <div class="advantage-block__number title-36-white">4</div>
                     <div class="advantage-block__image">
-                        <img src='../../img/advantages-fourth-image.png' alt=''>
+                        <img src='img/advantages-fourth-image.png' alt=''>
                     </div>
                     <div class="advantage-block__description">
                         <div class="advantage-block__title subtitle-21-white">Крутая
