--- a/app/sass/blocks/third-slide.sass
+++ b/app/sass/blocks/third-slide.sass
@@ -30,7 +30,7 @@
                 height: 48px
                 width: 100%
                 max-width: 245px
-                background-image: url('../../img/dotted-line-1.svg')
+                background-image: url('../img/dotted-line-1.svg')
                 right: -18px
                 top: 29px
         &:nth-child(2)
@@ -41,14 +41,14 @@
                 height: 62px
                 right: 96%
                 bottom: -77px
-                background-image: url('../../img/dotted-line-2.svg')
+                background-image: url('../img/dotted-line-2.svg')
         &:nth-child(3)
             transform: translate(25px, 25px)
             &::before
                 width: 100%
                 max-width: 254px
                 height: 42px
-                background-image: url('../../img/dotted-line-3.svg')
+                background-image: url('../img/dotted-line-3.svg')
                 top: 49px
                 right: -15px
         &:nth-child(4)
