Fixed bugs with media-queries

--- a/app/pages/includes/second-slide.html
+++ b/app/pages/includes/second-slide.html
@@ -1,151 +1,124 @@
-<div class="main__slider-item second-slide swiper-slide" style='background-image: url(img/second-slide-bg.png);'
-    data-slide-name='о дроне'>
-    <div class="container">
-
-        <div class="advantage__slider swiper-container wrapper">
-            <div class="advantage__slider-wrapper swiper-wrapper">
-
-                <div class="advantage__slider-item swiper-slide">
-                    <div class="advantage__info-block">
-                        <h2 class="advantage__title title-44-white">Что такое Mavic 2 Pro?</h2>
-                        <div class="advantage__text text-17-white">
-                            <p> Дрон Mavic 2 Pro - это инженерное чудо, идеальное для
-                                аэросъемки.
-                                Дрон обладает всеми лучшими технологиями DJI, он преобразит мир аэросъемки.</p>
-
-                            <p> Mavic 2 Pro оснащен совершенно новой камерой Hasselblad L1D-20c. Камера L1D-20c
-                                работает
-                                по
-                                уникальной технологии Hasselblad Natural Colour Solution (HNCS)5, позволяющей
-                                пользователям
-                                делать великолепные снимки с воздуха с разрешением в 20 мегапикселей и потрясающими
-                                цветами.</p>
-                        </div>
-                    </div>
-
-                    <div class="advantage__image-block">
-                        <div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
-                            технология аэросъемки</div>
-                        <div class="advantage__image">
-                            <img src='img/characteristics-slider-image.png' alt=''>
-                        </div>
-                    </div>
-
-
-                </div>
-
-
-                <div class="advantage__slider-item swiper-slide">
-                    <div class="advantage__info-block">
-                        <div class="advantage__title title-44-white">Что такое Mavic 2 Pro?</div>
-                        <div class="advantage__text text-17-white">
-                            <p> Дрон Mavic 2 Pro - это инженерное чудо, идеальное для
-                                аэросъемки.
-                                Дрон обладает всеми лучшими технологиями DJI, он преобразит мир аэросъемки.</p>
-
-                            <p> Mavic 2 Pro оснащен совершенно новой камерой Hasselblad L1D-20c. Камера L1D-20c
-                                работает
-                                по
-                                уникальной технологии Hasselblad Natural Colour Solution (HNCS)5, позволяющей
-                                пользователям
-                                делать великолепные снимки с воздуха с разрешением в 20 мегапикселей и потрясающими
-                                цветами.</p>
-                        </div>
-                    </div>
-
-                    <div class="advantage__image-block">
-                        <div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
-                            технология аэросъемки</div>
-                        <div class="advantage__image">
-                            <img src='img/characteristics-slider-image2.jpg' alt=''>
-                        </div>
-                    </div>
-
-
-
-                </div>
-
-
-                <div class="advantage__slider-item swiper-slide">
-                    <div class="advantage__info-block">
-                        <div class="advantage__title title-44-white">Что такое Mavic 2 Pro?</div>
-                        <div class="advantage__text text-17-white">
-                            <p> Дрон Mavic 2 Pro - это инженерное чудо, идеальное для
-                                аэросъемки.
-                                Дрон обладает всеми лучшими технологиями DJI, он преобразит мир аэросъемки.</p>
-
-                            <p> Mavic 2 Pro оснащен совершенно новой камерой Hasselblad L1D-20c. Камера L1D-20c
-                                работает
-                                по
-                                уникальной технологии Hasselblad Natural Colour Solution (HNCS)5, позволяющей
-                                пользователям
-                                делать великолепные снимки с воздуха с разрешением в 20 мегапикселей и потрясающими
-                                цветами.</p>
-                        </div>
-                    </div>
-
-                    <div class="advantage__image-block">
-                        <div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
-                            технология аэросъемки</div>
-                        <div class="advantage__image">
-                            <img src='img/characteristics-slider-image3.jpg' alt=''>
-                        </div>
-                    </div>
-
-
-
-                </div>
-
-
-                <div class="advantage__slider-item swiper-slide">
-                    <div class="advantage__info-block">
-                        <div class="advantage__title title-44-white">Что такое Mavic 2 Pro?</div>
-                        <div class="advantage__text text-17-white">
-                            <p> Дрон Mavic 2 Pro - это инженерное чудо, идеальное для
-                                аэросъемки.
-                                Дрон обладает всеми лучшими технологиями DJI, он преобразит мир аэросъемки.</p>
-
-                            <p> Mavic 2 Pro оснащен совершенно новой камерой Hasselblad L1D-20c. Камера L1D-20c
-                                работает
-                                по
-                                уникальной технологии Hasselblad Natural Colour Solution (HNCS)5, позволяющей
-                                пользователям
-                                делать великолепные снимки с воздуха с разрешением в 20 мегапикселей и потрясающими
-                                цветами.</p>
-                        </div>
-                    </div>
-
-                    <div class="advantage__image-block">
-                        <div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
-                            технология аэросъемки</div>
-                        <div class="advantage__image">
-                            <img src='img/characteristics-slider-image4.jpg' alt=''>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-            <div class="advantage__slider-btns">
-                <div class="advantage__prev-slide advantage__slider-btn sqaure-btn">
-                    <svg class="sqaure-btn__arrow" width="10" height="18" viewBox="0 0 10 18" fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path d="M9.21839 1L1 9L9.21839 17" stroke="black" />
-                    </svg>
-
-                </div>
-                <div class="advantage__next-slide advantage__slider-btn sqaure-btn">
-                    <svg class="sqaure-btn__arrow" width="10" height="18" viewBox="0 0 10 18" fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0.78161 17L9 9L0.78161 1" stroke="black" />
-                    </svg>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="main__next-slide">
-        <svg width="27" height="19" viewBox="0 0 17 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path opacity="0.5" d="M1 1L8.5 8L16 1" stroke="white" />
-        </svg>
-    </div>
+<div class="main__slider-item second-slide swiper-slide" style='background-image: url(img/common-bg.jpg);'
+	data-slide-name='о дроне'>
+	<div class="container">
+		<div class="advantage__slider swiper-container wrapper">
+			<div class="advantage__slider-wrapper swiper-wrapper">
+				<div class="advantage__slider-item swiper-slide">
+					<div class="advantage__info-block custom-scroll">
+						<h2 class="advantage__title title-44-white">Что такое Mavic 2 Pro?</h2>
+						<div class="advantage__text text-17-white">
+							<p> Дрон Mavic 2 Pro - это инженерное чудо, идеальное для
+								аэросъемки.
+								Дрон обладает всеми лучшими технологиями DJI, он преобразит мир аэросъемки.</p>
+							<p> Mavic 2 Pro оснащен совершенно новой камерой Hasselblad L1D-20c. Камера L1D-20c
+								работает
+								по
+								уникальной технологии Hasselblad Natural Colour Solution (HNCS)5, позволяющей
+								пользователям
+								делать великолепные снимки с воздуха с разрешением в 20 мегапикселей и потрясающими
+								цветами.</p>
+						</div>
+					</div>
+					<div class="advantage__image-block">
+						<div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
+							технология аэросъемки</div>
+						<div class="advantage__image">
+							<img src='img/characteristics-slider-image.png' alt=''>
+						</div>
+					</div>
+				</div>
+				<div class="advantage__slider-item swiper-slide">
+					<div class="advantage__info-block custom-scroll">
+						<div class="advantage__title title-44-white">Что такое Mavic 2 Pro?</div>
+						<div class="advantage__text text-17-white">
+							<p> Дрон Mavic 2 Pro - это инженерное чудо, идеальное для
+								аэросъемки.
+								Дрон обладает всеми лучшими технологиями DJI, он преобразит мир аэросъемки.</p>
+							<p> Mavic 2 Pro оснащен совершенно новой камерой Hasselblad L1D-20c. Камера L1D-20c
+								работает
+								по
+								уникальной технологии Hasselblad Natural Colour Solution (HNCS)5, позволяющей
+								пользователям
+								делать великолепные снимки с воздуха с разрешением в 20 мегапикселей и потрясающими
+								цветами.</p>
+						</div>
+					</div>
+					<div class="advantage__image-block">
+						<div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
+							технология аэросъемки</div>
+						<div class="advantage__image">
+							<img src='img/characteristics-slider-image2.jpg' alt=''>
+						</div>
+					</div>
+				</div>
+				<div class="advantage__slider-item swiper-slide">
+					<div class="advantage__info-block custom-scroll">
+						<div class="advantage__title title-44-white">Что такое Mavic 2 Pro?</div>
+						<div class="advantage__text text-17-white">
+							<p> Дрон Mavic 2 Pro - это инженерное чудо, идеальное для
+								аэросъемки.
+								Дрон обладает всеми лучшими технологиями DJI, он преобразит мир аэросъемки.</p>
+							<p> Mavic 2 Pro оснащен совершенно новой камерой Hasselblad L1D-20c. Камера L1D-20c
+								работает
+								по
+								уникальной технологии Hasselblad Natural Colour Solution (HNCS)5, позволяющей
+								пользователям
+								делать великолепные снимки с воздуха с разрешением в 20 мегапикселей и потрясающими
+								цветами.</p>
+						</div>
+					</div>
+					<div class="advantage__image-block">
+						<div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
+							технология аэросъемки</div>
+						<div class="advantage__image">
+							<img src='img/characteristics-slider-image3.jpg' alt=''>
+						</div>
+					</div>
+				</div>
+				<div class="advantage__slider-item swiper-slide">
+					<div class="advantage__info-block custom-scroll">
+						<div class="advantage__title title-44-white">Что такое Mavic 2 Pro?</div>
+						<div class="advantage__text text-17-white">
+							<p> Дрон Mavic 2 Pro - это инженерное чудо, идеальное для
+								аэросъемки.
+								Дрон обладает всеми лучшими технологиями DJI, он преобразит мир аэросъемки.</p>
+							<p> Mavic 2 Pro оснащен совершенно новой камерой Hasselblad L1D-20c. Камера L1D-20c
+								работает
+								по
+								уникальной технологии Hasselblad Natural Colour Solution (HNCS)5, позволяющей
+								пользователям
+								делать великолепные снимки с воздуха с разрешением в 20 мегапикселей и потрясающими
+								цветами.</p>
+						</div>
+					</div>
+					<div class="advantage__image-block">
+						<div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
+							технология аэросъемки</div>
+						<div class="advantage__image">
+							<img src='img/characteristics-slider-image4.jpg' alt=''>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="advantage__slider-btns">
+				<div class="advantage__prev-slide advantage__slider-btn sqaure-btn">
+					<svg class="sqaure-btn__arrow" width="10" height="18" viewBox="0 0 10 18" fill="none"
+						xmlns="http://www.w3.org/2000/svg">
+						<path d="M9.21839 1L1 9L9.21839 17" stroke="black" />
+					</svg>
+				</div>
+				<div class="advantage__next-slide advantage__slider-btn sqaure-btn">
+					<svg class="sqaure-btn__arrow" width="10" height="18" viewBox="0 0 10 18" fill="none"
+						xmlns="http://www.w3.org/2000/svg">
+						<path d="M0.78161 17L9 9L0.78161 1" stroke="black" />
+					</svg>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="main__next-slide">
+		<svg width="27" height="19" viewBox="0 0 17 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<path opacity="0.5" d="M1 1L8.5 8L16 1" stroke="white" />
+		</svg>
+	</div>
 </div>
