--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,7 +2,12 @@
 @import "fonts"
 @import "vars"
 //////GENERAL STYLES
-
+@import 'general/buttons.sass'
+@import 'general/error.sass'
+@import 'general/losung.sass'
+@import 'general/subtitle.sass'
+@import 'general/text.sass'
+@import 'general/title.sass'
 //////BLOCKS STYLES
 @import 'blocks/header.sass'
 @import 'blocks/first-slide.sass'
