--- a/app/pages/includes/third-slide.html
+++ b/app/pages/includes/third-slide.html
@@ -1,75 +1,72 @@
-<div class="main__slider-item third-slide swiper-slide" style='background-image: url(img/second-slide-bg.png);'
-    data-slide-name='преимущества'>
-    <div class="container">
-        <div class="third-slide__content wrapper">
-            <h2 class='third-slide__title title-44-white'>Преимущества</h2>
-            <div class="third-slide__advantages-blocks">
-
-                <div class="third-slide__advantage-block advantage-block">
-                    <div class="advantage-block__number title-36-white">1</div>
-                    <div class="advantage-block__image">
-                        <img src='img/advantages-first-image.png' alt=''>
-                    </div>
-                    <div class="advantage-block__description">
-                        <div class="advantage-block__title subtitle-21-white">Интеллектуальные
-                            режимы</div>
-                        <div class="advantage-block__text text-15-white">Mavic 2 унаследовал 6 стандартных режимов
-                            интеллектуальной съемки QuickShot: Roket / Dronie / Circle / Helix / Boomerang / Asteroid.
-                        </div>
-                    </div>
-                </div>
-
-                <div class="third-slide__advantage-block advantage-block">
-                    <div class="advantage-block__number title-36-white">2</div>
-                    <div class="advantage-block__image">
-                        <img src='img/advantages-second-image.png' alt=''>
-                    </div>
-                    <div class="advantage-block__description">
-                        <div class="advantage-block__title subtitle-21-white">Active Track 2.0</div>
-                        <div class="advantage-block__text text-15-white">Усовершенствованный режим второго поколения
-                            распознаёт и отслеживает объекты ещё точнее, быстрее и умнее.</div>
-                    </div>
-                </div>
-
-                <div class="third-slide__advantage-block advantage-block">
-                    <div class="advantage-block__number title-36-white">3</div>
-                    <div class="advantage-block__image">
-                        <img src='img/advantages-third-image.png' alt=''>
-                    </div>
-                    <div class="advantage-block__description">
-                        <div class="advantage-block__title subtitle-21-white">Панорамная
-                            съемка</div>
-                        <div class="advantage-block__text text-15-white">Mavic 2 поддерживает 4 режима
-                            панорамной съёмки: сферическая,
-                            180 градусов,
-                            горизонтальная, вертикальная</div>
-                    </div>
-                </div>
-
-                <div class="third-slide__advantage-block advantage-block">
-                    <div class="advantage-block__number title-36-white">4</div>
-                    <div class="advantage-block__image">
-                        <img src='img/advantages-fourth-image.png' alt=''>
-                    </div>
-                    <div class="advantage-block__description">
-                        <div class="advantage-block__title subtitle-21-white">Крутая
-                            камера!</div>
-                        <div class="advantage-block__text text-15-white">Технология Hyperlapse в четырёх режимах
-                            исполнения.
-                            Улучшенный фото режим HDR
-                            Функция HyperLight для съёмки в условиях слабого освещения
-                            4К съёмка
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
-        </div>
-    </div>
-    <div class="main__next-slide">
-        <svg width="27" height="19" viewBox="0 0 17 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path opacity="0.5" d="M1 1L8.5 8L16 1" stroke="white" />
-        </svg>
-    </div>
+<div class="main__slider-item third-slide swiper-slide" style='background-image: url(img/common-bg.jpg);'
+	data-slide-name='преимущества'>
+	<div class="container">
+		<div class="third-slide__content content wrapper">
+			<h2 class='third-slide__title title-44-white'>Преимущества</h2>
+			<div class="custom-scroll">
+				<div class="third-slide__advantages-blocks">
+					<div class="third-slide__advantage-block advantage-block">
+						<div class="advantage-block__number title-36-white">1</div>
+						<div class="advantage-block__image">
+							<img src='img/advantages-first-image.png' alt=''>
+						</div>
+						<div class="advantage-block__description">
+							<div class="advantage-block__title subtitle-21-white">Интеллектуальные
+								режимы</div>
+							<div class="advantage-block__text text-15-white">Mavic 2 унаследовал 6 стандартных режимов
+								интеллектуальной съемки QuickShot: Roket / Dronie / Circle / Helix / Boomerang /
+								Asteroid.
+							</div>
+						</div>
+					</div>
+					<div class="third-slide__advantage-block advantage-block">
+						<div class="advantage-block__number title-36-white">2</div>
+						<div class="advantage-block__image">
+							<img src='img/advantages-second-image.png' alt=''>
+						</div>
+						<div class="advantage-block__description">
+							<div class="advantage-block__title subtitle-21-white">Active Track 2.0</div>
+							<div class="advantage-block__text text-15-white">Усовершенствованный режим второго поколения
+								распознаёт и отслеживает объекты ещё точнее, быстрее и умнее.</div>
+						</div>
+					</div>
+					<div class="third-slide__advantage-block advantage-block">
+						<div class="advantage-block__number title-36-white">3</div>
+						<div class="advantage-block__image">
+							<img src='img/advantages-third-image.png' alt=''>
+						</div>
+						<div class="advantage-block__description">
+							<div class="advantage-block__title subtitle-21-white">Панорамная
+								съемка</div>
+							<div class="advantage-block__text text-15-white">Mavic 2 поддерживает 4 режима
+								панорамной съёмки: сферическая,
+								180 градусов,
+								горизонтальная, вертикальная</div>
+						</div>
+					</div>
+					<div class="third-slide__advantage-block advantage-block">
+						<div class="advantage-block__number title-36-white">4</div>
+						<div class="advantage-block__image">
+							<img src='img/advantages-fourth-image.png' alt=''>
+						</div>
+						<div class="advantage-block__description">
+							<div class="advantage-block__title subtitle-21-white">Крутая
+								камера!</div>
+							<div class="advantage-block__text text-15-white">Технология Hyperlapse в четырёх режимах
+								исполнения.
+								Улучшенный фото режим HDR
+								Функция HyperLight для съёмки в условиях слабого освещения
+								4К съёмка
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="main__next-slide">
+		<svg width="27" height="19" viewBox="0 0 17 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<path opacity="0.5" d="M1 1L8.5 8L16 1" stroke="white" />
+		</svg>
+	</div>
 </div>
