--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -1,6 +1,44 @@
 @import "vars"
 
-/*==========  Desktop First  ==========*/
+@mixin delete-advantage-lines
+	.third-slide
+		&__advantage-block
+			&:first-child
+				&::before
+					content: none
+			&:nth-child(3)
+				&::after
+					content: none
+				&::before
+					content: none
+
+@mixin mobile-advantage-block
+	.third-slide
+		&__advantages-blocks
+			grid-template-columns: 1fr
+			grid-template-rows: auto
+		&__advantage-block
+			&:nth-of-type(n)
+				justify-self: center
+				align-items: flex-end
+		.advantage-block
+			flex-direction: column
+			align-items: center
+			text-align: center
+			&:not(:last-of-type)
+				margin-bottom: 30px
+			&__image
+				margin-right: 0
+				margin-bottom: 15px
+			&__number
+				display: none
+			&__title
+				max-width: inherit
+
+@media only screen and (max-width : 480px), screen and (max-height : 440px)
+	.first-slide
+		&__mavic-image
+			width: auto
 
 @media only screen and (max-width : 768px), screen and (max-height : 640px)
 	.header
@@ -12,9 +50,7 @@
 	.title-44-white
 		margin-bottom: 20px
 		text-align: center
-	.wrapper
-		overflow-y: auto 
-		overflow-x: hidden
+
 @media only screen and (max-width : 460px)
 	.title-44-white
 		font-size: 28px 
@@ -27,8 +63,16 @@
 	.main__slider-wrapper.burger-menu--active
 		.main__slider-paggination
 			left: 50%
-	.header__burger-menu
-		display: block
+	.header
+		&__burger-menu
+			display: block
+		&__buy-btn
+			margin: 0 10px
+		&__phone-number	
+			position: fixed
+			bottom: 15px
+			left: -100%
+			transform: translate(-50%)
 	.main__slider-paggination
 		width: 100%
 		text-align: center
@@ -42,237 +86,311 @@
 			padding: 20px 0
 			&:first-of-type
 				display: none
-	.header__buy-btn
-		margin: 0 10px
-	.header__phone-number	
-		position: fixed
-		bottom: 40px
-		left: -100%
-		transform: translate(-50%)
 	
 @media only screen and (max-width : 540px), screen and (max-height : 640px)
-	.first-slide__losung
-		display: none
-	.first-slide__container
-		max-width: inherit
-	.first-slide__content
-		padding-bottom: 40px
-	.first-slide__mavic-image
-		width: auto
-		margin-bottom: 0
-	.first-slide__mavic-info
-		position: absolute
-		top: 50%
-		left: 50%
-		transform: translate(-50%, -50%)
-	.first-slide__mavic-description
-		margin-bottom: 0
+	.first-slide
+		&__losung
+			display: none
+		&__content
+			padding-bottom: 40px
+		&__mavic-image
+			margin-bottom: 0
+		&__mavic-description
+			margin-bottom: 0
 
 @media only screen and (max-width : 1250px), screen and (max-height : 768px)
-	.advantage__title
-		font-size: 34px
-	.advantage__image-block
-		margin: 0 auto
-	.advantage__text
-		padding-left: 0
-	.advantage__image-description
-		font-size: 20px
-		position: relative
-		transform: translateX(0)
-		text-align: center
-		margin: 0 auto 40px auto
-	.advantage__image
-		width: 100%
-		min-width: 300px
-		img
+	.advantage
+		&__title
+			font-size: 34px
+		&__image-block
+			margin: 0 auto
+		&__text
+			padding-left: 0
+		&__image-description
+			font-size: 20px
+			position: relative
+			transform: translateX(0)
+			text-align: center
+			margin: 0 auto 40px auto
+		&__image
 			width: 100%
+			min-width: 300px
+			img
+				width: 100%
 
 @media only screen and (max-width : 768px), screen and (max-height : 600px)
-	.advantage__slider-item
-		flex-direction: column
-	.advantage__info-block
-		margin: 0 0 40px 0
-		text-align: center
-		width: 100%
-		min-width: 100px
-		max-width: none
-	.advantage__title
-		font-size: 28px
-	.advantage__text
-		margin: 0 auto
-		max-width: 600px
-		text-align: center
-		p
-			&:not(:last-of-type)
-				margin-bottom: 10px
-	.advantage__image-description
-		display: none
-	.advantage__image
-		max-width: 320px
-		min-width: 150px
-		&::before
-			left: 0
-			bottom: 15px
-	.advantage__slider-btns
-		right: auto
-		left: 50%
-		transform: translate(-50%, 0)
-
-@media only screen and (max-height : 460px)
-	.advantage__image
-		display: none
-
-@media only screen and (max-width : 1240px),screen and (max-height : 630px)
-	.third-slide__advantages-blocks
-		justify-items: center
-		row-gap: 50px
-	.third-slide__advantage-block
-		align-items: flex-start
-		flex-direction: row
-		&:first-child
-			&::before
-				background-image: none
-		&:nth-child(2)
-			transform: translateY(0px)
-			&::after
-				background-image: none
-		&:nth-child(3)
-			transform: translate(0px, 0px)
-			&::before
-				background-image: none
-		&:nth-child(4)
-			transform: translate(0px, 0px)
-	.advantage-block__title
-		max-width: 100%		
-	.advantage-block__number
-		display: none
-	.advantage-block__image
-		margin-right: 20px
-		margin-bottom: 10px
-		align-self: center
-	.advantage-block__description
-		min-width: 220px
-
-@media only screen and (max-width : 960px),screen and (max-height : 550px)
-	.third-slide__advantages-blocks
-		grid-template-columns: 1fr
-	.third-slide__advantage-block
-		flex-direction: column
-	.advantage-block__description
-		min-width: 210px
-	.advantage-block__image
-		max-width: 200px
-
-
-
-@media only screen and (max-width : 1140px), screen and (max-height : 530px)
-	.characteristic-block__description
-		opacity: 1 !important
-		display: block
-	.characteristic-block__label
-		display: none
-	.characteristic-block__line
-		display: none
-
-@media only screen and (max-width : 960px)
-	.fourth-slide	
-		img
-			width: 50%
-
-@media only screen and (max-width : 768px), screen and (max-height : 530px)
-	.fourth-slide	
-		img
-			transform: translate(0%,-50%)
+	.advantage
+		&__slider-item
+			flex-direction: column
+		&__info-block
+			margin: 0 0 25px 0
+			text-align: center
 			width: 100%
-		&__content
-			overflow-y: visible !important
-	.fourth-slide__characteristic-blocks
-		grid-template-columns: 1fr !important
-		grid-template-rows: inherit
-		row-gap: 20px
-		height: auto
-	.fourth-slide__characteristics
-		display: flex
-		align-items: flex-start
-		flex-direction: row-reverse
-	.characteristic-block__pointer
-		display: none
-	.characteristic-block
-		opacity: 1
-		flex-direction: inherit
-		max-width: 350px
-		width: 100%
-	.characteristic-block__text
-		max-width: 100%
-
-@media only screen and (max-width : 560px)
-	.fourth-slide__characteristic-blocks
-		justify-items: center
-	.characteristic-block__title
-		text-align: center
-	.characteristic-block__text
-		text-align: center
-	.fourth-slide	
-		img
+			min-width: 100px
+			max-width: none
+		&__title
+			font-size: 28px
+		&__text
+			margin: 0 auto
+			max-width: 600px
+			text-align: center
+			p
+				&:not(:last-of-type)
+					margin-bottom: 10px
+		&__image-description
 			display: none
+		&__image
+			max-width: 320px
+			min-width: 150px
+			&::before
+				left: 0
+				bottom: 15px
+		&__slider-btns
+			right: auto
+			left: 50%
+			transform: translate(-50%, 0)
+
+@media only screen and (max-height : 500px)
+	.advantage
+		&__image
+			display: none
+		&__slider-btn
+			width: 45px
+			height: 40px
+
+@media only screen and (min-width : 1260px) and (max-height : 1070px)
+	.third-slide
+		&__content
+			max-height: 600px
+		&__advantages-blocks
+			grid-template-columns: repeat(2, minmax(120px, 1fr))
+			grid-template-rows: repeat(2, auto)
+			column-gap: 10px
+			row-gap: 100px
+		&__advantage-block
+			&:first-child
+				&::before
+					left: auto
+					transform: translateX(0%) scale(1) rotate(0deg)
+					right: -32px 
+					top: 32px 
+			&:nth-child(2)
+				transform: translateY(25px)
+			&:nth-child(3)
+				transform: translate(25px, 25px)
+				&::after
+					transform: translateX(0%) scale(1) rotate(0deg)
+					top: -93px
+				&::before
+					left: auto
+					transform: translateX(0%) scale(1) rotate(0deg)
+					top: 32px 
+					right: -33px 
+			&:nth-child(4)
+				transform: translate(25px, 50px)
+		.advantage-block
+			display: flex
+			align-items: flex-end
+			&__number
+				margin-right: 5px
+				line-height: 30px
+			&__image
+				width: 100%
+				max-width: 195px
+				height: 130px
+				position: relative
+				z-index: 10
+				margin-right: 30px
+				&::before
+					position: absolute
+					z-index: -10
+					content: ''
+					width: 100%
+					height: 100%
+					border: 2px solid #fff
+					bottom: 10px
+					left: 10px
+			&__description
+				width: 100%
+				min-width: 300px
+			&__title
+				max-width: 118px
+				margin-bottom: 10px
+			&__text
+				width: 100%
+				max-width: 300px
+
+@media only screen and (max-width : 1260px) and (max-height : 1080px)
+	.third-slide
+		&__content
+			max-height: 760px
+		&__advantages-blocks
+			row-gap: 40px
+		&__advantage-block
+			&:first-child
+				&::before
+					content: none
+			&:nth-child(3)
+				&::after
+					content: none
+				&::before
+					content: none
+
+@media only screen and (max-width : 768px), (min-width : 768px) and (max-height : 700px), (max-width : 1260px) and (max-height : 900px)
+	.third-slide
+		&__content
+			max-height: 760px
+		&__advantages-blocks
+			row-gap: 40px
+			grid-template-columns: 1fr
+			grid-template-rows: auto
+		&__advantage-block
+			&:nth-of-type(n)
+				transform: none
+				justify-self: center
+				align-items: flex-end
+			&:first-child
+				margin-top: 20px
+				&::before
+					content: none
+			&:nth-child(3)
+				&::after
+					content: none
+				&::before
+					content: none
+		.advantage-block
+			flex-direction: column
+			align-items: center
+			text-align: center
+			&:not(:last-of-type)
+				margin-bottom: 30px
+			&__text
+				max-width: 440px
+			&__image
+				margin-right: 0
+				margin-bottom: 15px
+			&__number
+				display: none
+			&__title
+				max-width: inherit
+
+@media only screen and (max-width : 1150px), (max-height : 600px) 
+	.fourth-slide	
+		.characteristic-block
+			&__pointer
+				display: none
+			&__description
+				text-align: center
+				margin: 0 auto
+				opacity: 1 !important
+
+@media only screen and (max-width : 1150px)
+	.fourth-slide	
+		&__bg-image
+			width: 100%
+			transform: translate(-50%, -60%)
+		.characteristic-block
+			height: 100%
+			align-items: inherit
+			background: rgba(#000, 0.6)
+			transition: 0.3s
+			&:hover
+				transition: 0.3s
+				background: rgba(#000, 0.2)
+
+@media only screen and (max-width : 670px), (max-height : 600px) 
+	.fourth-slide
+		&__bg-image
+			display: none	
+		&__characteristic-blocks
+			display: flex
+			flex-direction: column
+		&__characteristic-block
+			height: initial
+			&:not(:last-of-type)
+				margin-bottom: 50px
+		.characteristic-block
+			background: initial
+			flex-direction: column
+			height: initial
+			&__description
+				margin-bottom: 40px
+			&__text
+				max-width: 350px
+			&__image
+				margin: 0 auto
+				display: block
+				width: 100%
+				max-width: 300px
 
 @media only screen and (max-width : 768px), screen and (max-height : 625px)
-	.fifth-slide__dron-image
-		display: none
-	.fifth-slide__accordion
-		width: 100%
-		max-width: inherit
-@media only screen and (max-width : 460px)
-	.accordion__title
-		font-size: 16px
+	.fifth-slide
+		&__dron-image
+			display: none
+		&__accordion
+			width: 100%
+			max-width: inherit
 
-@media only screen and (max-width : 860px), screen and (max-height : 540px)
-	.info-block
-		flex-wrap: wrap-reverse
-		padding-left: 0
-		&__contacts
-			order: 2
-			width: 100%
-			display: flex
-			justify-content: space-between
-			flex-direction: row
-			margin-right: 0
-		&__contact
-			text-align: center
-		&__user-form
-			order: 3
-			flex: 1
-			max-width: inherit 
-			margin-bottom: 30px
-			margin-right: 0
-		&__social
-			order: 1
-			width: 100%
-			flex-direction: row
-			justify-content: center
-			margin-bottom: 20px
-		.info-block__link-media
-			&:not(:last-of-type)
-				margin-bottom: 0
-				margin-right: 30px
-	.contact__mail
-		width: auto
-@media only screen and (max-width : 660px), screen and (max-height : 540px)
-	.info-block
-		&__contacts
-			flex-direction: column
-			margin-bottom: 30px
-	.user-form
+@media only screen and (max-width : 460px)
+	.accordion
 		&__title
-			text-align: center
-		&__subtitle
-			text-align: center
-		&__form
-			grid-template-columns: 1fr !important
-		&__description-area
-			grid-column: 1/1
-		&__button
-			width: 100%
-	.contact__mail
-		width: fit-content
-		margin: 0 auto
+			font-size: 16px
+
+@media only screen and (max-width : 768px), screen and (max-height : 540px)
+	.six-slide
+		&__content
+			max-height: 600px
+		.info-block
+			flex-wrap: wrap-reverse
+			padding-left: 0
+			&__contacts
+				order: 2
+				width: 100%
+				display: flex
+				justify-content: space-between
+				flex-direction: row
+				margin-right: 0
+			&__contact
+				text-align: center
+			&__user-form
+				order: 3
+				flex: 1
+				max-width: inherit 
+				margin-bottom: 30px
+				margin-right: 0
+			&__social
+				order: 1
+				width: 100%
+				flex-direction: row
+				justify-content: center
+				margin-bottom: 20px
+			.info-block
+				&__link-media
+					&:not(:last-of-type)
+						margin-bottom: 0
+						margin-right: 30px
+		.contact__mail
+			width: auto
+
+@media only screen and (max-width : 660px), screen and (max-height : 540px)
+	.six-slide
+		&__content
+			max-height: 890px
+		.info-block
+			&__contacts
+				flex-direction: column
+				margin-bottom: 30px
+		.user-form
+			&__title
+				text-align: center
+			&__subtitle
+				text-align: center
+			&__form
+				grid-template-columns: 1fr 
+			&__description-area
+				grid-column: 1/1
+			&__button
+				width: 100%
+		.contact__mail
+			width: fit-content
+			margin: 0 auto
