--- a/app/pages/includes/fifth-slide.html
+++ b/app/pages/includes/fifth-slide.html
@@ -96,7 +96,7 @@
 							</div>
 						</div>
 					</div>
-					<img src="img/mavic-platinum-dron.png" alt="" class='fifth-slide__dron-image'>
+					<img src="img/mavic-platinum-dron.png" loading="lazy" alt="" class='fifth-slide__dron-image'>
 				</div>
 			</div>
 		</div>
