--- a/app/pages/includes/first-slide.html
+++ b/app/pages/includes/first-slide.html
@@ -7,7 +7,8 @@
 				<picture>
 					<source srcset='img/mavic-dron-mobile.png'
 						media="screen and (max-width: 480px), screen and (max-height: 440px)">
-					<img class="first-slide__mavic-image layer" src="img/mavic-dron-desktop.png" alt="drone">
+					<img class="first-slide__mavic-image layer" src="img/mavic-dron-desktop.png" loading="lazy"
+						alt="drone">
 				</picture>
 				<div class="first-slide__mavic-description text-17-white">Квадрокоптер Dji Mavic 2 Pro<br>
 					с профессиональной камерой Hasselblad</div>
