--- a/app/pages/includes/fourth-slide.html
+++ b/app/pages/includes/fourth-slide.html
@@ -5,7 +5,7 @@
 			<h2 class="fourth-slide__title title-44-white">Характеристики</h2>
 			<div class="custom-scroll">
 				<div class="fourth-slide__characteristic-blocks">
-					<img class="fourth-slide__bg-image" src="img/mavic-dron-desktop.png" alt="">
+					<img class="fourth-slide__bg-image" src="img/mavic-dron-desktop.png" loading="lazy" alt="">
 					<div class="fourth-slide__characteristic-block characteristic-block">
 						<div class="characteristic-block__description">
 							<div class="characteristic-block__title subtitle-21-white">Dlog-M 10 бит</div>
@@ -15,7 +15,7 @@
 								более широким динамическим диапазоном, дающим больше возможностей для цветокоррекции.
 							</div>
 						</div>
-						<img class="characteristic-block__image" src="img/characteristic-image1.png"
+						<img class="characteristic-block__image" src="img/characteristic-image1.png" loading="lazy"
 							alt="characteristic-image">
 						<div class="characteristic-block__pointer">
 							<svg class='characteristic-block__line' width="222" height="108" viewBox="0 0 222 108"
@@ -38,7 +38,7 @@
 							<div class="characteristic-block__text text-15-white">Зона активной работы новой 1-дюймовой
 								матрицы CMOS в четыре раза превышает показатели Mavic Pro</div>
 						</div>
-						<img class="characteristic-block__image" src="img/characteristic-image2.png"
+						<img class="characteristic-block__image" src="img/characteristic-image2.png" loading="lazy"
 							alt="characteristic-image">
 						<div class="characteristic-block__pointer">
 							<svg class='characteristic-block__line' width="250" height="98" viewBox="0 0 250 98"
@@ -62,7 +62,7 @@
 								известны эргономичным дизайном
 								и превосходным качеством изображений. </div>
 						</div>
-						<img class="characteristic-block__image" src="img/characteristic-image3.png"
+						<img class="characteristic-block__image" src="img/characteristic-image3.png" loading="lazy"
 							alt="characteristic-image">
 						<div class="characteristic-block__pointer">
 							<svg class='characteristic-block__line' width="340" height="76" viewBox="0 0 340 76"
@@ -89,7 +89,7 @@
 								полном
 								цветовом спектре</div>
 						</div>
-						<img class="characteristic-block__image" src="img/characteristic-image4.png"
+						<img class="characteristic-block__image" src="img/characteristic-image4.png" loading="lazy"
 							alt="characteristic-image">
 						<div class="characteristic-block__pointer">
 							<svg class='characteristic-block__line' width="117" height="84" viewBox="0 0 117 84"
