--- a/app/pages/includes/second-slide.html
+++ b/app/pages/includes/second-slide.html
@@ -23,7 +23,7 @@
 						<div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
 							технология аэросъемки</div>
 						<div class="advantage__image">
-							<img src='img/characteristics-slider-image.png' alt=''>
+							<img src='img/characteristics-slider-image.png' loading="lazy" alt=''>
 						</div>
 					</div>
 				</div>
@@ -47,7 +47,7 @@
 						<div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
 							технология аэросъемки</div>
 						<div class="advantage__image">
-							<img src='img/characteristics-slider-image2.jpg' alt=''>
+							<img src='img/characteristics-slider-image2.jpg' loading="lazy" alt=''>
 						</div>
 					</div>
 				</div>
@@ -71,7 +71,7 @@
 						<div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
 							технология аэросъемки</div>
 						<div class="advantage__image">
-							<img src='img/characteristics-slider-image3.jpg' alt=''>
+							<img src='img/characteristics-slider-image3.jpg' loading="lazy" alt=''>
 						</div>
 					</div>
 				</div>
@@ -95,7 +95,7 @@
 						<div class="advantage__image-description subtitle-24-white-align-right">Лучшая беспилотная
 							технология аэросъемки</div>
 						<div class="advantage__image">
-							<img src='img/characteristics-slider-image4.jpg' alt=''>
+							<img src='img/characteristics-slider-image4.jpg' loading="lazy" alt=''>
 						</div>
 					</div>
 				</div>
