--- a/app/pages/includes/six-slide.html
+++ b/app/pages/includes/six-slide.html
@@ -70,7 +70,7 @@
 	</div>
 	<div class="error">
 		<div class="error__window">
-			<img class="error__logo" src="img/logo-mobile.svg" alt="logo">
+			<img class="error__logo" src="img/logo-mobile.svg" loading="lazy" alt="logo">
 			<div class="error__title subtitle-21-white">Спасибо!</div>
 		</div>
 	</div>
