--- a/app/pages/includes/third-slide.html
+++ b/app/pages/includes/third-slide.html
@@ -8,7 +8,7 @@
 					<div class="third-slide__advantage-block advantage-block">
 						<div class="advantage-block__number title-36-white">1</div>
 						<div class="advantage-block__image">
-							<img src='img/advantages-first-image.png' alt=''>
+							<img src='img/advantages-first-image.png' loading="lazy" alt=''>
 						</div>
 						<div class="advantage-block__description">
 							<div class="advantage-block__title subtitle-21-white">Интеллектуальные
@@ -22,7 +22,7 @@
 					<div class="third-slide__advantage-block advantage-block">
 						<div class="advantage-block__number title-36-white">2</div>
 						<div class="advantage-block__image">
-							<img src='img/advantages-second-image.png' alt=''>
+							<img src='img/advantages-second-image.png' loading="lazy" alt=''>
 						</div>
 						<div class="advantage-block__description">
 							<div class="advantage-block__title subtitle-21-white">Active Track 2.0</div>
@@ -33,7 +33,7 @@
 					<div class="third-slide__advantage-block advantage-block">
 						<div class="advantage-block__number title-36-white">3</div>
 						<div class="advantage-block__image">
-							<img src='img/advantages-third-image.png' alt=''>
+							<img src='img/advantages-third-image.png' loading="lazy" alt=''>
 						</div>
 						<div class="advantage-block__description">
 							<div class="advantage-block__title subtitle-21-white">Панорамная
@@ -47,7 +47,7 @@
 					<div class="third-slide__advantage-block advantage-block">
 						<div class="advantage-block__number title-36-white">4</div>
 						<div class="advantage-block__image">
-							<img src='img/advantages-fourth-image.png' alt=''>
+							<img src='img/advantages-fourth-image.png' loading="lazy" alt=''>
 						</div>
 						<div class="advantage-block__description">
 							<div class="advantage-block__title subtitle-21-white">Крутая
