--- a/app/sass/blocks/third-slide.sass
+++ b/app/sass/blocks/third-slide.sass
@@ -5,7 +5,8 @@
 		margin-bottom: 60px
 	&__advantages-blocks
 		display: grid
-		grid-template-rows: repeat(4, 130px)
+		grid-template-rows: repeat(4, auto)
+		padding: 10px
 		column-gap: 10px
 		row-gap: 90px
 	&__advantage-block
@@ -31,7 +32,7 @@
 			&::before
 				height: 48px
 				width: 100%
-				max-width: 245px
+				max-width: 225px
 				background-image: url('../img/dotted-line-1.svg')
 				left: 50%
 				transform: translateX(-50%) scale(1, -1) rotate(-19deg)
@@ -47,7 +48,7 @@
 				background-image: url('../img/dotted-line-2.svg')
 			&::before
 				width: 100%
-				max-width: 254px
+				max-width: 205px
 				height: 42px
 				background-image: url('../img/dotted-line-3.svg')
 				top: 150px
