--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,44 +1,53 @@
 @font-face
 	font-family: 'SFPro'
+	font-display: swap
 	src: url('../fonts/SFProDisplay-Black.woff') format('woff')
 	font-weight: 800
 
 @font-face
 	font-family: 'SFPro'
+	font-display: swap
 	src: url('../fonts/SFProDisplay-Bold.woff') format('woff')
 	font-weight: 700
 
 @font-face
 	font-family: 'SFPro'
+	font-display: swap
 	src: url('../fonts/SFProDisplay-Semibold.woff') format('woff')
 	font-weight: 600
     
 @font-face
 	font-family: 'SFPro'
+	font-display: swap
 	src: url('../fonts/SFProDisplay-Medium.woff') format('woff')
 	font-weight: 500
 
 @font-face
 	font-family: 'SFPro'
+	font-display: swap
 	src: url('../fonts/SFProDisplay-Regular.woff') format('woff')
 	font-weight: 400
 
 @font-face
 	font-family: 'Ubuntu'
+	font-display: swap
 	src: url('../fonts/Ubuntu-Bold.woff') format('woff')
 	font-weight: 700
 
 @font-face
 	font-family: 'Ubuntu'
+	font-display: swap
 	src: url('../fonts/Ubuntu-Medium.woff') format('woff')
 	font-weight: 500
     
 @font-face
 	font-family: 'Ubuntu'
+	font-display: swap
 	src: url('../fonts/Ubuntu-Regular.woff') format('woff')
 	font-weight: 400
     
 @font-face
 	font-family: 'Ubuntu'
+	font-display: swap
 	src: url('../fonts/Ubuntu-Light.woff') format('woff')
 	font-weight: 300
